--- a/SM_Processing.Rmd
+++ b/SM_Processing.Rmd
@@ -121,11 +121,12 @@ read_campbell_dat <- function(path) {
     stringr::str_split(pattern = ",") %>% 
     purrr::pluck(1) %>% 
     paste(collapse = " ") %>% 
-    str_extract("RCSM[:digit:]|RC[:digit:]SM")
+    # because these instruments are sites RCSM2, RCSM2b, or RCSM3 
+    str_extract("RCSM2b_1|RCSM2b_2|RCSM2|RC[:digit:]SM")
   
   data <- readr::read_csv(path, col_names = column_names, skip = 4, na = "NAN", 
-                       col_types = cols(.default = col_double(), 
-                                        TIMESTAMP = col_datetime(format = "")))
+                          col_types = cols(.default = col_double(), 
+                                           TIMESTAMP = col_datetime(format = "")))
   data <- data %>%
     dplyr::mutate(ID = meta_data)
   
@@ -161,7 +162,7 @@ readSoilvueVWC_CR1000 <- function(data) {
     dplyr::rename(Date = TIMESTAMP) %>% 
     # add site name variable (ID)
     dplyr::mutate(ID = "RCSM2")
-    
+  
   return(data)
 }
 
@@ -233,14 +234,14 @@ clean_SM_data <- function(path, site){
     stringr::str_trim()
   
   if(site == "rc"){
-
-    ID <- dplyr::case_when(
-        ID == "20541053" ~ "RC1SM",
-        ID == "20541050" ~ "RCSM5",
-        TRUE ~ ID
-      )
     
-    }
+    ID <- dplyr::case_when(
+      ID == "20541053" ~ "RC1SM",
+      ID == "20541050" ~ "RCSM5",
+      TRUE ~ ID
+    )
+    
+  }
   
   ID <- stringr::str_to_upper(ID)
   
@@ -253,6 +254,9 @@ clean_SM_data <- function(path, site){
       # Read in data from .csv excluding top row
       data <- read_csv(path, skip = 1, 
                        col_types = cols(`#` = col_skip()))
+      
+      # retieve number of cols from data
+      data_cols <- ncol(data)
       
       # Name first column Date
       names(data)[1] <- "Date"
@@ -271,7 +275,7 @@ clean_SM_data <- function(path, site){
       colnames(data) <- data_colnames
       
       # 10 cm, 30 cm, and 1 meter configuration
-      if(TRUE %in% stringr::str_detect(data_colnames, pattern = "1m|100cm|1meter")){
+      if(TRUE %in% stringr::str_detect(data_colnames, pattern = "1m|100cm|1meter") & data_cols == 4){
         
         ten_cm <- select(data, date, matches("10cm|0.1m"))
         colnames(ten_cm) <- c("Date", "VWC_10cm")
@@ -284,13 +288,13 @@ clean_SM_data <- function(path, site){
         
         # Create clean/standardized data with sensor depths in proper order
         ordered_data <- plyr::join_all(list(ten_cm, thirty_cm , one_meter), by = 'Date', 
-                                     type = 'inner') %>%
-        dplyr::mutate(ID = ID)
+                                       type = 'inner') %>%
+          dplyr::mutate(ID = ID)
         
       }
       
       # 10 cm, 30 cm, and 75 cm configuration
-      if(TRUE %in% stringr::str_detect(data_colnames, pattern = "0.75m|75cm")){
+      if(TRUE %in% stringr::str_detect(data_colnames, pattern = "0.75m|75cm") & data_cols == 4){
         
         ten_cm <- select(data, date, matches("10cm|0.1m"))
         colnames(ten_cm) <- c("Date", "VWC_10cm")
@@ -303,14 +307,27 @@ clean_SM_data <- function(path, site){
         
         # Create clean/standardized data with sensor depths in proper order (i.e.columns)
         ordered_data <- plyr::join_all(list(ten_cm, thirty_cm , seventyfive_cm), by = 'Date', 
-                                     type = 'inner') %>%
-        dplyr::mutate(ID = ID)
+                                       type = 'inner') %>%
+          dplyr::mutate(ID = ID)
         
       }
-  
-  return(ordered_data)
-    
-  }
+      
+      # 30 cm only configuration
+      if(TRUE %in% stringr::str_detect(data_colnames, pattern = "0.3m|30cm") & data_cols == 2){
+        
+        thirty_cm <- select(data, date, matches("30cm|0.3m"))
+        colnames(thirty_cm) <- c("Date", "VWC_30cm")
+        
+        # Create clean/standardized data with sensor depths in proper order (i.e.columns)
+        ordered_data <- thirty_cm %>%
+          dplyr::mutate(ID = ID)
+        
+      }
+      
+      
+      return(ordered_data)
+      
+    }
     
     ## Data cleaning procedure for .dat files (Campbell SoilVUE) 
     if(stringr::str_detect(stringr::str_to_lower(path), pattern = ".dat")){
@@ -318,58 +335,58 @@ clean_SM_data <- function(path, site){
       if(stringr::str_detect(stringr::str_to_lower(path), "sap")){
         
         ordered_data <- read_campbell_dat(path = path) %>% 
-        readSoilvueVWC_CR1000()
+          readSoilvueVWC_CR1000()
         
-    } else {
-      
-      ordered_data <- readSoilvueVWC_CR300(path)
-      
+      } else {
+        
+        ordered_data <- readSoilvueVWC_CR300(path)
+        
       }
-  
-  return(ordered_data)
       
-      }
+      return(ordered_data)
+      
+    }
     
   }
   
   if(site == "childs"){
     
-     # Read in data from .csv excluding top row
-      data <- read_csv(path, skip = 1, 
-                       col_types = cols(`#` = col_skip()))
-      
-      # Name first column Date
-      names(data)[1] <- "Date"
-      
-      # Parse Date as POSIXct object, rounds down to half hour
-      data <- data %>% 
-        dplyr::mutate(Date = lubridate::mdy_hms(Date)) %>% 
-        dplyr::mutate(Date = lubridate::floor_date(Date, unit = "minute"))
-      
-      # Extract columns for sensor depths, perform regex search to deduce the sensor depth
-      # Lower case all column names and strip spaces to ease regex matching
-      data_colnames <- colnames(data) %>% 
-        stringr::str_to_lower() %>% 
-        stringr::str_replace_all(pattern = " ", replacement = "")
-      
-      colnames(data) <- data_colnames
-      
-      # 30 cm, 60 cm configuration
-      thirty_cm <- select(data, date, matches("30cm|0.6m"))
-      colnames(thirty_cm) <- c("Date", "VWC_30cm")
-        
-      sixty_cm <- select(data, date, matches("60cm|0.6m"))
-      colnames(sixty_cm) <- c("Date", "VWC_60cm")
-      
-      # Create clean/standardized data with sensor depths in proper order
-      ordered_data <- plyr::join_all(list(thirty_cm, sixty_cm), by = 'Date', 
-                                     type = 'inner') %>%
-        dplyr::mutate(ID = ID)
-      
-      return(ordered_data)
+    # Read in data from .csv excluding top row
+    data <- read_csv(path, skip = 1, 
+                     col_types = cols(`#` = col_skip()))
+    
+    # Name first column Date
+    names(data)[1] <- "Date"
+    
+    # Parse Date as POSIXct object, rounds down to half hour
+    data <- data %>% 
+      dplyr::mutate(Date = lubridate::mdy_hms(Date)) %>% 
+      dplyr::mutate(Date = lubridate::floor_date(Date, unit = "minute"))
+    
+    # Extract columns for sensor depths, perform regex search to deduce the sensor depth
+    # Lower case all column names and strip spaces to ease regex matching
+    data_colnames <- colnames(data) %>% 
+      stringr::str_to_lower() %>% 
+      stringr::str_replace_all(pattern = " ", replacement = "")
+    
+    colnames(data) <- data_colnames
+    
+    # 30 cm, 60 cm configuration
+    thirty_cm <- select(data, date, matches("30cm|0.6m"))
+    colnames(thirty_cm) <- c("Date", "VWC_30cm")
+    
+    sixty_cm <- select(data, date, matches("60cm|0.6m"))
+    colnames(sixty_cm) <- c("Date", "VWC_60cm")
+    
+    # Create clean/standardized data with sensor depths in proper order
+    ordered_data <- plyr::join_all(list(thirty_cm, sixty_cm), by = 'Date', 
+                                   type = 'inner') %>%
+      dplyr::mutate(ID = ID)
+    
+    return(ordered_data)
     
   }
-    
+  
 }
 
 ```
