--- a/SM_Processing_May2021.Rmd
+++ b/SM_Processing_May2021.Rmd
@@ -32,3 +32,44 @@ RC_compile_Feb2021 <- readr::read_csv(file = "RC_SM_Feb2021/compiled_RC_Feb2021.
 compiled_RC_May2021 <- process_SM_data(path = "RC_SM_May2021", 
                                         site = "RC", prev_compile = RC_compile_Feb2021, written_file_name = "compiled_RC_May2021.csv")
 ```
+
+#### Prev. Compile Marian (Nov 2020)
+
+```{r}
+MM_compile_Nov2020 <- readr::read_csv(file = "Marian_SM_Nov2020/compiled_Marian_Nov2020.csv", 
+                                       col_types = cols(Date = col_character(), .default = col_double())) %>% 
+  dplyr::mutate(Date = lubridate::ymd_hms(Date))
+```
+
+#### New Compile for Marian
+
+```{r}
+compiled_Marian_May2021 <- process_SM_data(path = "Marian_SM_May2021", 
+                                        site = "marian", prev_compile = MM_compile_Nov2020, written_file_name = "compiled_Marian_May2021.csv")
+```
+
+#### Control Meadow Soil Moisture Data
+
+```{r}
+Control_compile_Aug2020 <- readr::read_csv(file = "Control_SM_Aug2020/compiled_Control_Aug2020.csv", 
+                                       col_types = cols(Date = col_character(), .default = col_double())) %>% 
+  dplyr::mutate(Date = lubridate::ymd_hms(Date))
+```
+
+```{r}
+compiled_Control_Nov2020 <- process_SM_data(path = "C:/Users/Simon/Desktop/Meadow_SM/Control_SM_Nov2020", 
+                                        site = "control", prev_compile = Control_compile_Aug2020, written_file_name = "compiled_Control_Nov2020.csv")
+```
+
+#### Childs Meadow Soil Moisture Data
+
+```{r}
+Childs_compile_Aug2020 <- readr::read_csv(file = "Childs_SM_Aug2020/compiled_Childs_Aug2020.csv", 
+                                       col_types = cols(Date = col_character(), .default = col_double())) %>% 
+  dplyr::mutate(Date = lubridate::ymd_hms(Date))
+```
+
+```{r}
+compiled_Childs_Nov2020 <- process_SM_data(path = "C:/Users/Simon/Desktop/Meadow_SM/Childs_SM_Nov2020", 
+                                        site = "Childs", prev_compile = Childs_compile_Aug2020, written_file_name = "compiled_Childs_Nov2020.csv")
+```
